<resources>
    <string name="app_name">Profile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="profile_photo">Photo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="edition">Edition</string>
    <string name="interesting_topic">Interesting Topic</string>
    <string name="gender">Gender</string>
    <string name="birth">Birthday</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthday">Birthday</string>
    <string name="au">AU</string>
    <string name="us">US</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string name="edit_here">Edit here</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
